HelloUltraviolet/Fixtures/RejectedSource/Statements/LetRefutablePattern/Expected.uv
//! Expected diagnostic metadata for the LetRefutablePattern rejected-source specimen.

expectedDiagnostic("E-SEM-2711", "rule.18.Let-Refutable-Pattern-Err")
